Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14848

INSTALLS entries with no_check_exist not picked up into deployables

XMLWordPrintable

    • c42b12c98e1b27ac7146c31fdcdbe53915cab2c8

      With qmake adding entries to INSTALLS with non-existing files are normally skipped so no corresponding stuff appears in the Makefile. However, adding

      some_thing.CONFIG += no_check_exist
      

      overrides this and adds the corresponding rules to the Makefile even when the file does not exist (yet).

      It seems Creator does not support this, because adding an entry like

      some_thing.files = i_dont_exist
      some_thing.path = /a/b/c
      some_thing.CONFIG += no_check_exist
      INSTALLS += some_thing
      

      to a project .pro file will not add the file under the Project page's "Files to deploy" list. This is then a dealbreaker for embedded deployments since it means the file will not be deployed to the device even though it gets created at some point during the build steps.

        For Gerrit Dashboard: QTCREATORBUG-14848
        # Subject Branch Project Status CR V

            buddenha Oswald Buddenhagen
            lagocs Laszlo Agocs
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes